# Kaggle-Data-Analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: todo.md
.github/workflows/: ci.yaml
cookie_cats/: 250105_describe_data.ipynb
data/cookie_cats/info/: cookie_cats_profile.html
data/cookie_cats/processed/: cookie_cats.csv  log.txt
data/titanic/info/: train_profile.json
kaggle_projects/: run_project.py
kaggle_projects/base/src/: formats.py  functions.py
kaggle_projects/base/src/components/: __init__.py  base.py
kaggle_projects/base/tests/: test_download_data.py  test_extract_data_info.py
kaggle_projects/data/titanic/info/: train_profile.json
kaggle_projects/data/titanic/raw/: submission.csv
kaggle_projects/houseprice/notebooks/: chat.ipynb
kaggle_projects/houseprice/src/: formats.py  functions.py
kaggle_projects/titanic/: formats.py  functions.py  requirements.txt
kaggle_projects/titanic/notebooks/: EDA.ipynb  titanic-the-only-notebook-you-need-to-see.ipynb  titanic-top-solution.ipynb
kaggle_projects/titanic/src/: formats.py  functions.py
kaggle_projects/titanic/tests/: test_download_data.py  test_extract_data_info.py  test_modeling.py  test_validate_output.py
notebooks/: 250105_describe_data.ipynb
src/: __init__.py  formats.py  functions.py
src/components/: base.py
src/components/download_data/: __init__.py  component.py
src/components/extract_data_info/: component.py
src/components/modeling/: component.py  component.yaml
src/components/preprocess_data/: component.py
src/components/test_output/: component.py
src/models/: XGBoost.py  base.py  decision_tree.py  logistic_regression.py  title_prediction.py
src/pipelines/: base.py
src/pipelines/default/: pipeline.py  pipeline.yaml
src/pipelines/titanic/: pipeline.py  pipeline.yaml
workplace/: utils.py
workplace/cookie_cats/: 250105_describe_data.ipynb
(+20 files in other folders)
